<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.espmobile.esp_mobile.login.CreateAccountActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:indeterminateTint="@color/espRed"
        android:indeterminateTintMode="multiply"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <ImageView
        android:contentDescription="@string/image_view_content_description"
        android:id="@+id/create_account_screen_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map_alt_bg" />

    <Button
        android:id="@+id/create_account_button"
        style="@style/ESPButtonOrange"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="createAccount"
        android:text="@string/create_account_prompt"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@+id/trailing"
        app:layout_constraintStart_toStartOf="@+id/leading"
        app:layout_constraintTop_toTopOf="@+id/create_account_button_top" />

    <Button
        android:id="@+id/fb_sign_up_button"
        style="@style/ESPFacebookButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:enabled="false"
        android:text="@string/fb_sign_up_prompt"
        app:layout_constraintBottom_toTopOf="@+id/fb_button_height"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/top" />

    <ImageView
        android:id="@+id/or_separator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_view_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/or_separator_height"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/fb_button_height"
        app:srcCompat="@drawable/or_separator" />

    <TextView
        android:id="@+id/fill_out_info_prompt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/fill_out_info_prompt"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:autoSizeTextType="uniform"
        android:typeface="sans"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/prompt_height"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/or_separator_height"
        tools:targetApi="o" />

    <EditText
        style="@style/ESPNameField"
        android:id="@+id/ca_first_name_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:hint="@string/first_name_field"
        app:layout_constraintBottom_toTopOf="@+id/first_name_field_height"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/first_name_field_top"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        style="@style/ESPNameField"
        android:id="@+id/ca_last_name_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:hint="@string/last_name_field"
        app:layout_constraintBottom_toTopOf="@+id/last_name_field_height"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/first_name_field_height" />

    <android.support.constraint.Guideline
        android:id="@+id/leading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/trailing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <android.support.constraint.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <android.support.constraint.Guideline
        android:id="@+id/content_leading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/content_trailing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/fb_button_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <android.support.constraint.Guideline
        android:id="@+id/or_separator_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/prompt_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/first_name_field_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <android.support.constraint.Guideline
        android:id="@+id/first_name_field_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <android.support.constraint.Guideline
        android:id="@+id/last_name_field_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/email_field_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <EditText
        style="@style/ESPEmailField"
        android:id="@+id/ca_email_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:hint="@string/email_field"
        app:layout_constraintBottom_toTopOf="@+id/email_field_bottom"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/last_name_field_height" />

    <android.support.constraint.Guideline
        android:id="@+id/username_field_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <EditText
        style="@style/ESPUsernameField"
        android:id="@+id/ca_username_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:hint="@string/username_field"
        app:layout_constraintBottom_toTopOf="@+id/username_field_bottom"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/username_field_top" />

    <android.support.constraint.Guideline
        android:id="@+id/username_field_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <EditText
        style="@style/ESPPasswordField"
        android:id="@+id/ca_password_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:hint="@string/password_field"
        app:layout_constraintBottom_toTopOf="@+id/password_field_bottom"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/username_field_bottom" />

    <android.support.constraint.Guideline
        android:id="@+id/password_field_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <EditText
        style="@style/ESPPasswordField"
        android:id="@+id/ca_confirm_password_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:hint="@string/confirm_password_field"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_field_bottom"
        app:layout_constraintEnd_toStartOf="@+id/content_trailing"
        app:layout_constraintStart_toStartOf="@+id/content_leading"
        app:layout_constraintTop_toTopOf="@+id/password_field_bottom" />

    <android.support.constraint.Guideline
        android:id="@+id/confirm_password_field_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

    <android.support.constraint.Guideline
        android:id="@+id/create_account_button_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <android.support.constraint.Guideline
        android:id="@+id/coming_soon_leading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

    <android.support.constraint.Guideline
        android:id="@+id/coming_soon_trailing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86" />

    <android.support.constraint.Guideline
        android:id="@+id/coming_soon_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/coming_soon_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <Button
        android:id="@+id/coming_soon_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/espOrange"
        android:text="@string/coming_soon"
        android:textAllCaps="false"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/coming_soon_bottom"
        app:layout_constraintEnd_toStartOf="@+id/coming_soon_trailing"
        app:layout_constraintStart_toStartOf="@+id/coming_soon_leading"
        app:layout_constraintTop_toTopOf="@+id/coming_soon_top"
        tools:ignore="SmallSp" />

</android.support.constraint.ConstraintLayout>