<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_cell_height"
    android:background="@android:color/white"
    android:id="@+id/item_contact">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/delete_contact_button"
            style="@style/ESPSButtonSwipe"
            android:background="@color/espRed"
            android:text="@string/delete" />

        <Button
            android:id="@+id/edit_contact_button"
            style="@style/ESPSButtonSwipe"
            android:background="@color/darkESPGrey"
            android:text="@string/edit"
            app:layout_constraintStart_toEndOf="@id/delete_contact_button"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="5dp">

        <android.support.constraint.Guideline
            android:id="@+id/contact_circle_trailing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.18" />

        <ImageView
            android:id="@+id/letter_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_view_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/contact_circle_trailing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/name_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:paddingLeft="10dp"
            android:text="@string/name_placeholder"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/location_name_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/contact_circle_trailing"
            app:layout_constraintTop_toTopOf="@id/name_top" />

        <android.support.constraint.Guideline
            android:id="@+id/location_name_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/coords_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:paddingLeft="10dp"
            android:text="@string/phone_placeholder"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/coords_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/contact_circle_trailing"
            app:layout_constraintTop_toTopOf="@id/coords_top" />

        <android.support.constraint.Guideline
            android:id="@+id/coords_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <android.support.constraint.Guideline
            android:id="@+id/add_icon_leading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <android.support.constraint.Guideline
            android:id="@+id/add_icon_trailing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ImageView
            android:id="@+id/add_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_view_content_description"
            android:paddingBottom="@dimen/button_text_padding"
            android:paddingTop="@dimen/button_text_padding"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/coords_bottom"
            app:layout_constraintEnd_toEndOf="@id/add_icon_trailing"
            app:layout_constraintStart_toStartOf="@id/add_icon_leading"
            app:layout_constraintTop_toTopOf="@id/name_top"
            app:srcCompat="@drawable/add_icon" />
    </android.support.constraint.ConstraintLayout>

</com.daimajia.swipe.SwipeLayout>